--- a/Quarto/holiday_results.qmd
+++ b/Quarto/holiday_results.qmd
@@ -23,8 +23,6 @@ db <- dbConnect(RSQLite::SQLite(), here("Results/Database/sim_results.db"))
 
 ```
 
-
-
 New addition was calcualtion of bias for beta covariates to investiage why we are seeing no impact on performance from random effects models when we introduce level 2 endogenity.
 
 Simulation scenarios:
@@ -38,7 +36,7 @@ Scenarios run factorially. Note, when the ICC is zero, the intercept-predictor c
 
 scenarios <- dbGetQuery(db,
             "SELECT  DISTINCT n_studies, ICC, R2, study_sample_size_train , int_pred_corr
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023'  AND metric = 'calib_itl'"
 )
 n_studies <- paste(scenarios$n_studies |> unique(), collapse = ", ")
@@ -50,7 +48,7 @@ tibble(Parameter = c("N studies", "Study sample size", "ICC", "R2", "Intercept-p
 
 metrics <- dbGetQuery(db,
             "SELECT  DISTINCT metric
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023'"
 )
 
@@ -59,6 +57,7 @@ tibble(metrics)
 ```
 
 ### Data generating parameters
+
 #### When there is no correleation between intercepts and predictors
 
 ```{r}
@@ -78,8 +77,7 @@ bind_rows(
   select(R2, ICC, sigma_u = u, sigma_e = e, everything())
 ```
 
-What is going on? For a given ICC sigma_u and sigma_e are fixed to give a variance for the random part of the model of 1 and the required ICC. The variance of individual predicors is 1, so beta is chosed to the required predictors explain the required ammount of the total variance. The variance of the outcome explained by predictors will be $ 12*beta_x^2$.
-
+What is going on? For a given ICC sigma_u and sigma_e are fixed to give a variance for the random part of the model of 1 and the required ICC. The variance of individual predicors is 1, so beta is chosed to the required predictors explain the required ammount of the total variance. The variance of the outcome explained by predictors will be \$ 12\*beta_x\^2\$.
 
 #### When there is a correleation between intercepts and predictors
 
@@ -98,15 +96,13 @@ bind_rows(
 
 ```
 
-
-
 ## Random intercept models underestimate variance of intercepts whent there are a small number of studies
 
 ```{r, echo = FALSE}
 
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train , int_pred_corr, model, beta_mean_error, beta_x, sigma_e, sigma_u, est, test_ss, n_studies_test, metric, tau2 rep_number, error_var_u
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'var_u' AND est IS NOT NULL AND int_pred_corr =0"
 ) 
 
@@ -128,12 +124,11 @@ data |>
 
 ### Impact on predictive performance: Calibration in the large
 
-
 ```{r, echo = FALSE}
 # Processing database results to give summaries and ns
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train ,test_ss, int_pred_corr, model, est, tau2, sigma_e, sigma_u, intercept_est_sample_size, metric, n_studies_test
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'calib_itl' AND int_pred_corr = 0.0" 
 )
 
@@ -148,6 +143,7 @@ data |>
   ProfacSims:::plot.sim_results(what = "Performance")
 
 ```
+
 There is hetrogeneity for some scenarios:
 
 ```{r, fig.height = 12}
@@ -158,27 +154,26 @@ data |>
 
 We would expect poor estiamtion of study intercepts to lead to heterogeneous calibration in the large. There are however different approaches to estimate random intercepts in new samples.
 
-
 -   Random intercept models can underestimate variance of intercepts when there are a small number of studies
-- This will lead to over-penalisation of predicted intercepts, which in turn will lead to heterogeneity in calibration-in-the large
-- When the ICC is 0, random intercept models penalise estimates of intercepts towards zero, where as fixed- (or no estimate of intercept models) apply no penalisation
-- When ICC > 0 the penalization of random intercepts leads to better perfmroance.
-- There is some evidence of over penalization - Calib ITL is worse with a small number of studies 
-- As the ICC increases the difference between random intercept models and fixed effects models shrinks. This is due to random intercept models applying a lower ammount of penalisation
-- The impact of REML is minimal. 
-- Patterns remain if 100 people are avialbe for estimating intercepts but differences are negligible.
-- Tau remains low - what is material? The outcome variance is between 1 and 3 (higher variances for the outcome for higher r-squared = 0.7). When Tau is 0.1 this as is 10% of outcome variance. Tau of 0.1 feel less material as is 1% of outcome variance
-- Conclusions: When there is limited data to estimate new intercepts, random intercept models outperform fixed effect models. When ICCs are moderate this occurs even when there are only 4 studies and random intercept variances are underestimated. When more data is available to estimate interepts, performance is similar for all models, except for 4 studies when radnom intercept models do worse.
-
+-   This will lead to over-penalisation of predicted intercepts, which in turn will lead to heterogeneity in calibration-in-the large
+-   When the ICC is 0, random intercept models penalise estimates of intercepts towards zero, where as fixed- (or no estimate of intercept models) apply no penalisation
+-   When ICC \> 0 the penalization of random intercepts leads to better perfmroance.
+-   There is some evidence of over penalization - Calib ITL is worse with a small number of studies
+-   As the ICC increases the difference between random intercept models and fixed effects models shrinks. This is due to random intercept models applying a lower ammount of penalisation
+-   The impact of REML is minimal.
+-   Patterns remain if 100 people are avialbe for estimating intercepts but differences are negligible.
+-   Tau remains low - what is material? The outcome variance is between 1 and 3 (higher variances for the outcome for higher r-squared = 0.7). When Tau is 0.1 this as is 10% of outcome variance. Tau of 0.1 feel less material as is 1% of outcome variance
+-   Conclusions: When there is limited data to estimate new intercepts, random intercept models outperform fixed effect models. When ICCs are moderate this occurs even when there are only 4 studies and random intercept variances are underestimated. When more data is available to estimate interepts, performance is similar for all models, except for 4 studies when radnom intercept models do worse.
 
 ### Impact on predictive performance: Calibration slope
+
 Calibration slope are very similar for models adjusting for study. Calibration slope is less than one when sample sizes are smaller due to overfitting. When ICCs are larger, calibration slope is worse. This is due to there being a lower level of explained variation within study, so a hihger sample size being required to ensure good calibration. Choice of method for esitmating intercepts has no bearing on calibraiton slope.
 
 ```{r, echo = FALSE}
 # Processing database results to give summaries and ns
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train ,test_ss, int_pred_corr, model, est, tau2, sigma_e, sigma_u, intercept_est_sample_size, metric, n_studies_test
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'calib_slope' AND int_pred_corr = 0.0" 
 )
 
@@ -191,6 +186,7 @@ data |>
   ProfacSims:::plot.sim_results(what = "Performance")
 
 ```
+
 ```{r, fig.height = 12}
 data |> 
   ProfacSims:::plot.sim_results(what = "Tau")
@@ -198,16 +194,15 @@ data |>
 
 Between study heterogeneity in calibration slope is minimal.
 
-
 ### Impact on predictive performance: R-sqared
 
-We see a mixture of the impact on calibration in the large and calibration slope. Hetrogeneity in intercept estimation leads to differences in r-squared.  
+We see a mixture of the impact on calibration in the large and calibration slope. Hetrogeneity in intercept estimation leads to differences in r-squared.
 
 ```{r, echo = FALSE}
 # Processing database results to give summaries and ns
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train ,test_ss, int_pred_corr, model, est, tau2, sigma_e, sigma_u, intercept_est_sample_size, metric, n_studies_test
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'r-squared' AND int_pred_corr = 0.0" 
 )
 
@@ -220,6 +215,7 @@ data |>
   ProfacSims:::plot.sim_results(what = "Performance")
 
 ```
+
 ```{r, fig.height = 12}
 data |> 
   ProfacSims:::plot.sim_results(what = "Tau")
@@ -229,7 +225,7 @@ data |>
 # Processing database results to give summaries and ns
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train , int_pred_corr, model, beta_mean_error, beta_x, sigma_e, sigma_u
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'var_u'"
 )
 
@@ -273,8 +269,6 @@ We expect the bias in betas to be zero for all models when there is no correlati
 
 The following plots examine the difference between the mean estimated betas and the true value for betas. They show percentage bias in beta on the y-axis. Each model has 12 beta parameters, that should be equal. The plots takes the mean across all beta parameters.
 
-
-
 ```{r, fig.height = 9}
 summaries |> filter(int_pred_corr==0) |> plot_results_by_model(CI = TRUE) + ylab("Percentage bias in beta")
 
@@ -282,8 +276,7 @@ summaries |> filter(int_pred_corr==0) |> plot_results_by_model(CI = TRUE) + ylab
 
 ### No correlation between predictors and study intercepts
 
-Negligible bias for all scenarios
-### Correlation between predictors and study intercepts (level 2 endogeneity)
+Negligible bias for all scenarios \### Correlation between predictors and study intercepts (level 2 endogeneity)
 
 -   Logistic regression with fixed intercepts gives unbiased betas accross all scenarios.
 -   No adjusting for study leads to a large bias When using random intercept models bias reduces with stidy size, to become almost zero for study size 1000.
@@ -320,7 +313,7 @@ This is the case - MSE is similar accross all scenarios that adjust for study, a
 ```{r, echo = FALSE}
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train , int_pred_corr, model, beta_mean_error, beta_mse, sigma_e, sigma_u
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND metric = 'var_u'"
 )
 
@@ -355,7 +348,7 @@ Extra step in predidcion pipeline - meta-analyzing model results
 
 data <- dbGetQuery(db,
            "SELECT n_studies, ICC, R2, study_sample_size_train , int_pred_corr, model, metric, est
-            FROM sim_results_v1
+            FROM sim_results_v2
             WHERE sim_name = 'BatchAug2023' AND intercept_est_sample_size = 1000 AND (metric = 'calib_slope' OR metric = 'r-squared')"
 )
 
